fix(services): enforce tenant-scoped property catalog